kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniselec-api
  labels:
    app: uniselec-api
spec:
  selector:
    matchLabels:
      app: uniselec-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: uniselec-api
    spec:
      containers:
      - name: uniselec-api
        image: harbor.unilab.edu.br/unilab/uniselec-api:latest
        imagePullPolicy: Always
        command: ["/bin/sh"]
        args:
        - -c
        - |
          echo "Configurando permissões Laravel"

          chown -R www-data:www-data /var/www/html/storage
          chmod -R 775 /var/www/html/storage

          chown -R www-data:www-data /var/www/html/bootstrap/cache
          chmod -R 775 /var/www/html/bootstrap/cache

          echo "Permissões configuradas. Iniciando Apache..."

          exec apache2-foreground
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /up
            port: 80
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 11
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /up
            port: 80
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 13
          failureThreshold: 3
        volumeMounts:
        - name: storage-volume
          mountPath: /var/www/html/storage
      volumes:
      - name: storage-volume
        persistentVolumeClaim:
          claimName: pvc-uniselec-storage
      imagePullSecrets:
      - name: regcred
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
